$Id: CHANGES,v 1.135 2001/08/17 09:55:09 stelian Exp $

Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
===================================================================

1.	Fixed the permissions of a newly created QFA file by dump.

2.	Cleaned up the source of dump (the external variables 
	definition was a complete mess, making possible to have
	objects overlap).

3.	Fixed restore to use the full tape volume path when doing
	a compare (since it changes the working directory to the
	filesystem being compared in the process).

4.	Added the -q option to dump which makes dump abort 
	whenever it needs operator attention. It should be
	easier to use dump in scripts with this option.

5.	Detect the use of incompatible options to dump and
	refuse them (like -a and -B options together).

6.	Added bzip2 compression to dump/restore (use option -j level 
	to select it). Note that you will need a restore version
	>= 0.4b24 in order to restore a bzip2 compressed dump.
	The same warning as for the zlib compression applies:
	the tape format of a bzip2 dump is not compatible with the
	original BSD tape format.

7.	Fixed a overflow problem in dump corrupting the dump when
	very large files were encountered. Thanks to Vladimir Nadvornik 
	for the bug report.

Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
===================================================================

1.	Fixed a buffer overflow in restore/tape.c. Patch provided by
	Marcus Meissner (Caldera International Security Dept.).

2.	Implement the Sun rmt extended protocol. Patch submitted
	by Ian Gordon <iangordon@users.sourceforge.net>.

3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
	the linux kernel header. This ensures that dump always has the
	latest version of this file. Patch submitted by
	Andreas Dilger <adilger@turbolinux.com>.

4.	Report any filesystem present in either /etc/fstab with a 
	positive passno or /etc/dumpdates in dump -w output.