@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.135 2001/08/17 09:55:09 stelian Exp $
+$Id: CHANGES,v 1.136 2001/09/06 09:00:31 stelian Exp $
 
 Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 ===================================================================
@@ -31,6 +31,12 @@ Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 	very large files were encountered. Thanks to Vladimir Nadvornik 
 	for the bug report.
 
+8.	Added a ioctl(BLKFLSBUF) in dump which should flush the
+	kernel buffer/page cache before starting the dump, helping
+	a bit those who use dump on mounted filesystems. Thanks to
+	John Yu <jky@it.bu.edu> and to Theodore T'so <tytso@mit.edu>
+	for this suggestion.
+	
 Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
 ===================================================================
 
